Adding edited completed files.

--- a/data.html
+++ b/data.html
@@ -7394,7 +7394,7 @@
                 </div>
               </body>
               <footer>
-                <div class="footer"> Copyright &copy; Stephen Domke 2021
+                <div class="footer">
                 </div>
             </footer>
           <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
